--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 1 <html>
-2 <body bgcolor="yellow">
+2 <body bgcolor="red">
 3 <h1>WELCOME TO ALL OF YOU </h1>
 4 <front color="red"><marquee>Dear All WELCOME> 
 5 </body> 
